@@ -1,5 +1,11 @@
 2016-01-14  Natalia Portillo  <claunia@claunia.com>
 
+	* DiscImageChef.Devices.csproj:
+	* Device/ScsiCommands/SyQuest.cs:
+	  Added SyQuest vendor commands.
+
+2016-01-14  Natalia Portillo  <claunia@claunia.com>
+
 	* Enums.cs:
 	* DiscImageChef.Devices.csproj:
 	* Device/ScsiCommands/Plasmon.cs:
